# fastq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
idl/: CMakeLists.txt  fastq.fbs  fastq.h  system_asserts.h
libs/: CMakeLists.txt
libs/consumer/: CMakeLists.txt  consumer.cc  consumer.h
libs/core/: CMakeLists.txt  fastq_core.cc  fastq_core.h  fastq_utils.h  logger.cc  logger.h  mmap_file.cc  mmap_file.h  strong_typedef.h  throw_if.h  tsc_clock.h  types.h
libs/idl/: fastq.h
libs/producer/: CMakeLists.txt  producer.cc  producer.h
sample_app/: CMakeLists.txt  main.cc
sample_app/test_consumer/: test_consumer.cc
sample_app/test_producer/: CMakeLists.txt  test_producer.cc
sample_apps/: CMakeLists.txt
sample_apps/benchmark_app/: CMakeLists.txt  benchmark_app.cc
sample_apps/sample_idl/: sample_idl.h
sample_apps/shared_lib/: CMakeLists.txt  statistics.h
sample_apps/test_consumer/: CMakeLists.txt  test_consumer.cc
sample_apps/test_producer/: CMakeLists.txt  test_producer.cc
system_tests/: performance_tests.py  test.shm
unit_tests/: CMakeLists.txt  basic_tests.cc  fastq_core_tests.cc  gtest.cmake  performance_tests.cc  types.h
